--- a/stylelegendary.css
+++ b/stylelegendary.css
@@ -3,6 +3,13 @@
     height: 110px;
 }
 
+
+.garoto {
+    width: 500px;
+    height: 500px;
+}
+
+
     
 header{
     width: 100%;
@@ -13,3 +20,20 @@ header{
 body {
     background-color:#032F6E ;
 }
+
+.containerimg {
+    margin-left: 130px;
+    width: 500px;
+    height: 500px;
+    margin-top: 30px;
+
+}
+
+.containertext {
+margin-left: 750px;
+width: 300px;
+height: 300px;
+}
+
+
+
