--- a/stylelegendary.css
+++ b/stylelegendary.css
@@ -1,16 +1,17 @@
+* {
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+
+
 .logo {
     width: 110px;
     height: 110px;
 }
 
-
-.garoto {
-    width: 500px;
-    height: 500px;
-}
-
-
-    
+ 
 header{
     width: 100%;
     height: 110px;
@@ -29,10 +30,34 @@ body {
 
 }
 
+h1 {
+    color: white;
+    font: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+
+h2 {
+    color: white;
+    font: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: start;
+}
+
+
+.container {
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+
+}
+
 .containertext {
-margin-left: 750px;
-width: 300px;
-height: 300px;
+    width: 500px;
+    height: 500px;
+    margin-left: 750px;
 }
 
 
